2008-11-08  Wakaba  <wakaba@suika.fam.cx>

	* Makefile: New rules for Encode::EUCJP1997OPENNEC are added.

	* readme.en.html: A link to the new module is added.

2008-09-15  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Link updated.

	* Makefile: EUCJP1997's version incremented.

2007-07-29  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: New documentation.

	* Makefile: Unused rules are removed; it now can
	make tarballs.

2007-07-29  Wakaba  <wakaba@suika.fam.cx>

	* Makefile: Copy of manakai's |lib/Message/Charset/Makefile|.

	* ChangeLog: New file.
